--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "unit": "cross-env karma start test/unit/karma.conf.js --single-run"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-runtime": "^6.0.0",
     "ejs": "2.5.5",
+    "pug": "^2.0.0-rc.4",
     "quasar-extras": "0.0.7",
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
+    "store": "^2.0.12",
     "vue": "^2.5.11",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1"
