--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "unit": "cross-env karma start test/unit/karma.conf.js --single-run"
   },
   "dependencies": {
-    "axios": "^0.17.1",
     "@types/lodash.debounce": "^4.0.3",
+    "axios": "^0.17.1",
     "babel-runtime": "^6.0.0",
+    "bitsharesjs": "^1.4.1",
+    "bitsharesjs-ws": "^1.3.1",
     "debounce-decorator": "^1.0.6",
     "ejs": "2.5.5",
-    "pug": "^2.0.0-rc.4",
     "lodash": "^4.17.4",
+    "pug": "^2.0.0-rc.4",
     "quasar-extras": "0.0.7",
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
     "store": "^2.0.12",
