--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "quasar-extras": "0.0.7",
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
     "store": "^2.0.12",
+    "v-mask": "^1.3.0",
     "vue": "^2.5.11",
     "vue-clipboard2": "^0.0.8",
     "vue-property-decorator": "^6.0.0",
