--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue": "^2.5.11",
     "vue-clipboard2": "^0.0.8",
     "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.1"
   },
   "devDependencies": {
     "@types/chai": "^3.4.35",
