--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./typings/module/*"],
+      "@/*": ["./*"]
+    },
     "module": "es2015",
     "moduleResolution": "node",
     "target": "es5",
@@ -18,6 +23,9 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true
   },
+  "include": [
+    "./**/*",
+  ],
   "compileOnSave": false
 }
 // {
