--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "vue-clipboard2": "^0.0.8",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.6.1"
+    "vuelidate": "^0.6.1",
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.0"
   },
   "devDependencies": {
     "@types/chai": "^3.4.35",
