--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ npm-debug.log.*
 selenium-debug.log
 test/unit/coverage
 test/e2e/reports
-cordova/platforms
-cordova/plugins
+cordova/
 thumbs.db
 !.gitkeep
 server.conf.js
