--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "v-mask": "^1.3.0",
     "vue": "^2.5.11",
     "vue-clipboard2": "^0.0.8",
+    "vue-i18n": "^7.4.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1",
